# vcrypto-shop-backend-

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  register-commands.mjs  wrangler.toml
src/: company.rs  lib.rs  service.rs  vcrypto.rs  verifying_key.rs
src/company/: client.rs  company.rs  product.rs
src/service/: discord.rs  vcrypto.rs
src/service/discord/: product.rs  shop.rs
