[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = {version = "0.2.0"}
serverless-discord-interactions = { git = "https://github.com/virtualCrypto-discord/serverless-discord-interactions-rs" }
serverless-discord-interactions-cloudflare-backend = { git = "https://github.com/virtualCrypto-discord/serverless-discord-interactions-rs" }
anyhow = "1.0.82"
ed25519-dalek = "2.1.1"
hex = "0.4.3"
bincode = "1.3.3"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
reqwest = {version = "0.12.4", features = ["json"]}
tracing = "0.1"
tracing-web = "0.1"
tracing-subscriber = { version = "0.3", features=['time', 'json'] }
time = { version = "0.3", features=['wasm-bindgen'] }
[profile.release]
opt-level = "s"   # optimize for size in release builds
lto = true
strip = true
codegen-units = 1
